<resources>
    <string name="app_name" translatable="false">Corra</string>
    <string name="descricao_botao_corrida">Botão inicia corrida</string>
    <string name="dialog_message">O aplicativo necessita da permissão de localização precisa para funcionar corretamente.</string>
    <string name="dialog_title">Permissão negada.</string>
    <string name="home">Home</string>
    <string name="corrida">Corrida</string>
    <string name="ok">OK</string>
    <string name="contextmenutitle">Escolha uma ação</string>
    <string name="gpsdialogmessage">O aplicativo requer que o serviço de GPS esteja ativado</string>
    <string name="gpsdialogtitle">GPS Desativado</string>
    <string name="tempo">Tempo</string>
    <string name="dist">Distância</string>
    <string name="pace">Pace</string>
    <string name="descricao_botao_stop">Botão encerra corrida</string>
    <string name="zero" translatable="false">0:00</string>
    <string name="btnsettings">Botão leva para tela de configurações de corrida</string>
    <string name="habilitar_treino_intervalado">Habilitar treino intervalado</string>
    <string name="tempo_correndo_segundos">Tempo correndo (segundos)</string>
    <string name="_30">30</string>
    <string name="repeti_es_0_indeterminado">Repetições (0 indeterminado)</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="tempo_andando_segundos">Tempo andando (segundos):</string>
    <string name="salvar">Salvar</string>
    <string name="andando" translatable="false">andando</string>
    <string name="correndo" translatable="false">correndo</string>
    <string name="reps" translatable="false">reps</string>
    <string name="intervalado" translatable="false">intervalado</string>
    <string name="walkinterval">Intervalo: Andando</string>
    <string name="runninginterval">Intervalo: Correndo</string>
    <string name="intervaldisabled">Intervalos desabilitados</string>
    <string name="intervalos">Intervalos</string>
    <string name="actionbartitlesettings">Configurações de Intervalo</string>
    <string name="actionbartitlecorrida">Corrida</string>
    <string name="actionbartitlehome">Suas Corridas</string>
    <string name="horariocard">Horário:</string>
    <string name="tempocard">Tempo:</string>
    <string name="distcard">Distância:</string>
    <string name="datacard">Data:</string>
    <string name="corrida_do_dia">Corrida do Dia:</string>
    <string name="speed">Vel</string>
    <string name="ttsText">Você correu um quilômetro</string>
    <string name="start_color"><![CDATA[<font color=#000000>Fim: </font> <font color=##323232>]]></string>
    <string name="invalidos">Valores inválidos</string>
    <string name="ritmo">Ritmo:</string>
    <string name="min_km">Min/Km</string>
    <string name="km_h">Km/h</string>
</resources>