<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/titulotv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/corrida_do_dia"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data_detalhes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulotv" />

    <TextView
        android:id="@+id/horario_detalhe_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_detalhes_tv" />

    <View
        android:id="@+id/barra2"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:background="@color/azul_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horario_detalhe_tv" />

    <TextView
        android:id="@+id/distancia_detalhes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/barra2"
        app:layout_constraintEnd_toEndOf="@+id/barra2"
        app:layout_constraintStart_toStartOf="@+id/barra2"
        app:layout_constraintTop_toTopOf="@+id/barra2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dist"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/distancia_detalhes_tv"
        app:layout_constraintEnd_toEndOf="@+id/barra2"
        app:layout_constraintStart_toStartOf="@+id/barra2"
        app:layout_constraintTop_toTopOf="@+id/barra2" />

    <TextView
        android:id="@+id/tempo_detalhes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/barra2"
        app:layout_constraintEnd_toEndOf="@+id/barra2"
        app:layout_constraintStart_toStartOf="@+id/barra2"
        app:layout_constraintTop_toBottomOf="@+id/distancia_detalhes_tv" />

    <TextView
        android:id="@+id/pace_detalhes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra2" />
</androidx.constraintlayout.widget.ConstraintLayout>